[metadata]
name = scttsrapy
author = KeironO
author_email = keiron@fastmail.co.uk
description = Python wrapper for DIMEdbs REST API.
version = 0.0.1
url = https://github.com/AberystwythSystemsBiology/scttsrapy
keywords =
  snomed-ct
classifiers =
  Development Status :: 1 - Planning
  Intended Audience :: Science/Research
  Intended Audience :: Developers
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Topic :: Scientific/Engineering :: Medical Science Apps.
  License :: OSI Approved :: GNU General Public License v3 (GPLv3)
  Operating System :: OS Independent
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
install_reqs = parse_requirements('requirements.txt', session='hack')
[options]
python_requires = >= 3.6
setup_requires =
  setuptools >= 38.6
  pip >= 10
  twine >= 1.11
include_package_data = True
packages = find: